plugins {
    id "com.jfrog.bintray" version "1.8.4"
}

repositories {
    mavenCentral()
    jcenter()
}

apply plugin: 'eclipse'
apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'com.jfrog.bintray'
apply plugin: 'jacoco'

dependencies {

	compile 'io.vertx:vertx-web:4.0.0-milestone1'
	
	testCompile 'io.vertx:vertx-config:4.0.0-milestone1'
	testCompile 'io.vertx:vertx-config-yaml:4.0.0-milestone1'
	
	testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.0")
    testCompile("org.junit.platform:junit-platform-launcher:1.5.0")
	
	// Logback (via SLF4J)
	testRuntime 'ch.qos.logback:logback-classic:1.2.3'
	
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

sourceCompatibility='1.8'
targetCompatibility='1.8'

jar.archiveName = "vertx-web-accesslog-1.4.0_RC1.jar"
bintrayUpload.packageName = "vertx-web-accesslog-1.4.0_RC1.jar"

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            
            groupId 'com.mdac'
            artifactId 'vertx-web-accesslog'
            version '1.4.0_RC1'
            
            from components.java

            artifact sourceJar {
                classifier "sources"
            }
        }
    }
}


bintray {
	user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
	key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
    
    publications = ['mavenJava']
    dryRun = false
    publish = true
    pkg {
        repo = 'maven'
        name = 'com.mdac.vertx-web-accesslog'
        licenses = ['Apache-2.0']
        labels = ['vertx', 'log', 'accesslog']
        publicDownloadNumbers = true
        //Optional version descriptor
        override = false
        vcsUrl = 'https://github.com/romanpierson/vertx-web-accesslog.git'
        version {
        	name = '1.4.0_RC1'
        }
    }
}

jacocoTestReport {
	reports {
		xml.enabled = true
		html.enabled = true
	}
}

wrapper() {
  gradleVersion = '5.5.1'
}

